--- a/Web/Views/Experience/Edit.cshtml
+++ b/Web/Views/Experience/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model VerotMorin.PreciousGames.Web.Models.ExperienceModels.ExperienceViewModel
 
 @{
-    ViewBag.Title = "Nouvelle expérience";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Nouvelle expérience</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +15,8 @@
         <h4>ExperienceViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Player, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -39,24 +41,18 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.GameId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.GameId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.GameId, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+       
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Créer" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Retour", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
