--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -11,15 +11,6 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-
-
 <table>
 
     <tr>
@@ -32,15 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.ReleaseDate)
         </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Kind)
-        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.KindId)
         </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Editor)
-        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.EditorId)
         </th>
@@ -49,43 +34,31 @@
 
     @foreach (var item in Model.GamesTopRated)
     {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Description)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.ReleaseDate)
-    </td>
-    @*<td>
-            @Html.DisplayFor(modelItem => item.Kind.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Editor.Id)
-        </td>*@
-    <td>
-        @Html.DisplayFor(modelItem => item.KindId)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.EditorId)
-    </td>
-    @*<td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>*@
-</tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReleaseDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KindId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EditorId)
+            </td>
+        </tr>
     }
 </table>
 
+<br />
+<br />
+<br />
 
 <table>
-    <br />
-    <br />
-    <br />
-   
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Name)
@@ -96,12 +69,6 @@
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.ReleaseDate)
         </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Kind)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Editor)
-        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.KindId)
         </th>
@@ -114,12 +81,9 @@
 
     @foreach (var item in Model.BestEvaluations)
     {
-
-
-
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Game)
+                @Html.DisplayFor(modelItem => item.Game.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Mark)
@@ -130,12 +94,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.EvaluatorName)
             </td>
-            
-            @*<td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>*@
         </tr>
     }
 </table>
