--- a/Web/Views/Editor/Create.cshtml
+++ b/Web/Views/Editor/Create.cshtml
@@ -19,6 +19,7 @@
     </div>
 
     <div class="text-end">
+        @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
         <input class="btn btn-primary" type="submit" value="Créer" />
     </div>
 }
