--- a/Web/Views/Evaluation/Details.cshtml
+++ b/Web/Views/Evaluation/Details.cshtml
@@ -37,7 +37,8 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Éditer", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Retour", "Index")
-</p>
+
+<div class="text-end">
+    @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
+    @Html.ActionLink("Éditer", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" })
+</div>
