--- a/Web/Views/Experience/Delete.cshtml
+++ b/Web/Views/Experience/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Suppression d'une expérience</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûr de vouloir le supprimer ?</h3>
 <div>
-    <h4>ExperienceViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,17 +33,15 @@
         <dd>
             @Html.DisplayFor(model => model.Percentage)
         </dd>
-
-        
-
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+
+        <div class="text-end">
+            @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
+            <input class="btn btn-danger" type="submit" value="Supprimer"/>
         </div>
     }
 </div>
