--- a/Web/Views/Experience/Details.cshtml
+++ b/Web/Views/Experience/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model VerotMorin.PreciousGames.Web.Models.ExperienceModels.ExperienceViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Détails";
 }
 
-<h2>Details</h2>
+<h2>Expérience de @Model.Player</h2>
 
 <div>
-    <h4>ExperienceViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -44,7 +43,8 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<div class="text-end">
+    @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
+    @Html.ActionLink("Éditer", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" })
+</div>
