--- a/Web/Views/Game/Create.cshtml
+++ b/Web/Views/Game/Create.cshtml
@@ -18,50 +18,35 @@
         
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Game.EditorId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Game.EditorId, Model.Editors, null, new { @class = "form-select" })
-            </div>
+            @Html.DropDownListFor(model => model.Game.EditorId, Model.Editors, null, new { @class = "form-select" })
         </div>
         
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Game.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Game.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Game.Name, "", new { @class = "text-danger" })
-            </div>
-
+            @Html.EditorFor(model => model.Game.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Game.Name, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Game.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Game.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Game.Description, "", new { @class = "text-danger" })
-            </div>
-
+            @Html.EditorFor(model => model.Game.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Game.Description, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Game.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Game.ReleaseDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @Html.ValidationMessageFor(model => model.Game.ReleaseDate, "", new { @class = "text-danger" })
-            </div>
-
+            @Html.EditorFor(model => model.Game.ReleaseDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+            @Html.ValidationMessageFor(model => model.Game.ReleaseDate, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Game.KindId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Game.KindId, Model.Kinds, null, new { @class = "form-select" })
-            </div>
+            @Html.DropDownListFor(model => model.Game.KindId, Model.Kinds, null, new { @class = "form-select" })
         </div>
 
-        <div class="form-group my-2">
-            <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
-                <input type="submit" value="Créer" class="btn btn-default" />
-            </div>
+        <div class="mt-4 form-group text-end">
+            @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
+            <input class="btn btn-primary" type="submit" value="Créer" />
         </div>
     </div>
 }
