--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -2,17 +2,17 @@
 @model IndexViewModel
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Accueil";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h1>Precious Games</h1>
+<h2>Soyez le bienvenue la seule plate-forme accessible depuis les grottes !</h2>
 
+<br />
+<br />
+
+<h3>Le top des jeux : </h3>
 <table>
-
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Name)
@@ -55,31 +55,30 @@
 </table>
 
 <br />
+<hr />
 <br />
-<br />
+
+<h3>Les derniers avis :</h3>
 
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Name)
+            @Html.DisplayNameFor(model => model.LastEvaluations.GetEnumerator().Current.Game.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.Description)
+            @Html.DisplayNameFor(model => model.LastEvaluations.GetEnumerator().Current.EvaluatorName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.ReleaseDate)
+            @Html.DisplayNameFor(model => model.LastEvaluations.GetEnumerator().Current.Date)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.KindId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GamesTopRated.GetEnumerator().Current.EditorId)
+            @Html.DisplayNameFor(model => model.LastEvaluations.GetEnumerator().Current.Mark)
         </th>
         <th></th>
     </tr>
 
 
-    @foreach (var item in Model.BestEvaluations)
+    @foreach (var item in Model.LastEvaluations)
     {
         <tr>
             <td>
