--- a/Web/Views/Kind/Edit.cshtml
+++ b/Web/Views/Kind/Edit.cshtml
@@ -18,17 +18,13 @@
 
         <div class="form-group my-2">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
 
-        <div class="form-group my-2">
-            <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
-                <input type="submit" value="Mettre à jour" class="btn btn-default" />
-            </div>
+        <div class="mt-4 form-group text-end">
+            @Html.ActionLink("Retour", "Index", null, new { @class = "btn btn-secondary" })
+            <input class="btn btn-primary" type="submit" value="Sauvegarder" />
         </div>
     </div>
 }
