Ajout Ajax recherche + derniers ajustements

--- a/Web/Views/Evaluation/Edit.cshtml
+++ b/Web/Views/Evaluation/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model VerotMorin.PreciousGames.Web.Models.EvaluationModels.EvaluationViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Édition";
 }
 
-<h2>Edit</h2>
+<h2>Édition</h2>
 
 
 @using (Html.BeginForm())
