--- a/Web/Views/Game/Index.cshtml
+++ b/Web/Views/Game/Index.cshtml
@@ -5,67 +5,38 @@
     ViewBag.Title = "Jeux";
 }
 
+<script type="text/javascript">
+    function searchAjax() {
+        const search = $('#searchInput').val();
+
+        $.ajax({  
+            type: "GET",  
+            url: `@Url.Action("Search")?search=${search}`,
+            success: htmlResponse => {  
+                $('#list').html(htmlResponse);
+            },  
+            error: function () {  
+                alert("Error while inserting data");  
+            }  
+        });  
+    }
+</script>
+
 <h2>Jeux</h2>
 
 <div class="d-flex justify-content-between">
     @Html.ActionLink("Ajouter un jeu", "Create")
-
-    @using (Html.BeginForm("Index", "Game", FormMethod.Get, new { @class = "d-flex text-right" }))
-    {
-        @Html.LabelFor(model => model.SearchString, new { @class = "form-label" })
-        @Html.TextBoxFor(model => model.SearchString, new { @class = "form-control" })
-        <input class="btn btn-primary" type="submit" value="Rechercher" />
-    }
+    
+    <div class="d-flex align-items-center gap-2">
+        @Html.Label("Recherche", new { @class = "form-label" })
+        @Html.TextBox("Recherche", null, new { id = "searchInput", @class = "form-control" })
+        <button class="btn btn-primary" onclick="searchAjax()">Rechercher</button>
+    </div>
 </div>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Games.GetEnumerator().Current.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Games.GetEnumerator().Current.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Games.GetEnumerator().Current.ReleaseDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Games.GetEnumerator().Current.Kind)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Games.GetEnumerator().Current.Editor)
-        </th>
-        <th></th>
-    </tr>
+<div id="list">
+    @Html.Partial("_List", Model.Games)
+</div>
 
-    @foreach (GameViewModelFull item in Model.Games)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Kind.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Editor.Id)
-            </td>
-            <td>
-                @Html.ActionLink("Évaluations", "Index", "Evaluation", new { gameId = item.Id, }, null) |
-                @Html.ActionLink("Expériences", "Index", "Experience", new { gameId = item.Id, }, null) |
-                @Html.ActionLink("Éditer", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Détails", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Supprimer", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
-
-</table>
 
 <h6>Il y a @Model.GameCount jeu(x) au total.</h6>
